--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,145 @@
-.App {
-  text-align: center;
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container{
   display: flex;
   flex-direction: column;
+  min-height:100vh;
+  position: relative;
+}
+
+.top-container{
+  background-color: #D9D9D9;
+ 
+  height: 46px;
+  display: flex;
+  flex-direction: row;
   align-items: center;
+   position: relative;
+   justify-content: space-between;
+   padding: 10px;
+}
+.email-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.website-mail{
+  width: 180px;
+  height: 24px;
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 16px;
+ 
+  top: 11px;
+  left: 57px;
+  line-height: 24px;
+}
+.icon{
+  width: 20px;
+  height: 15px;
+  top: 2px;
+  left: 2px;
+}
+.top-left-side-text-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+}
+.text{
+  
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 16px;
+  height: 24px;
+  top: 11px;
+  
+  line-height: 24px;
+  color: #000000;
+}
+
+.feedback{
+ width: 81px;
+ 
+  left: 1192px;
+}
+.epaper{
+   width: 58px;
+ 
+  left: 1298px;
+
+}
+.symbol{
+  width: 5px;
+  left: 1283px;
+  margin-right: 10px;
+}
+.logo-rti-express{
+  width: 140px;
+  height: 95px;
+  margin-top: 72px;
+  margin-left: 28px;
+}
+.logo-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+  margin: 15px;
+}
+.bg-color-container{
+  background-color: #D9D9D9;
+    width: 935px;
+    height: 95px;
+    margin-top: 72px;
+    margin-left: 483px;
+
+}
+.map-form-container{
+ display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+ 
+  width: 100%;
+}
+.map-container{
+background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v1752493253/apmap1_lfev8g__1_1752493150-removebg-preview_lhxh1y.png");
+  min-height: 100vh;
+  background-size: cover;
+  margin-bottom: 50px;
+  width: 50%;
+   position: relative;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.form-main-container{
+  
+   
+  
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(2px);
+  z-index: 2;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.early-access-heading{
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 26px;
+  color:  #222;
+}
+.signup-para{
+  font-family: "Poppins";
+  font-weight: 900;
+  font-size: 24px;
+  color: #1877F2;
 }
