--- a/src/Header.css
+++ b/src/Header.css
@@ -4,8 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 50px;
+    padding: 10px 50px;
     box-sizing: border-box;
+     z-index: 1;
 }
 
 #home{
