--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,14 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+  overflow-x: hidden;
+
 }
 .app-container{
   display: flex;
   flex-direction: column;
   min-height:100vh;
-  
+  width: 100%;
 }
 
 .top-container{
@@ -18,7 +20,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 15px;
+  padding: 20px;
+  width: 100%;
 }
 
 .email-container{
@@ -27,7 +30,7 @@
   align-items: center;
 }
 .website-mail{
-  width: 180px;
+  
   height: 24px;
   font-family: "Poppins";
   font-weight: 600;
@@ -56,21 +59,16 @@
   color: #000000;
 }
 
-.feedback{
- width: 81px;
+
  
-  
-}
 .epaper{
-   width: 58px;
+  
  
  
   text-decoration: none;
 
 }
 .symbol{
-  width: 5px;
-  
   margin-right: 10px;
 }
 .logo-rti-express{
@@ -84,11 +82,12 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin:15px;
+  margin:12px;
+  
 }
 .bg-color-container{
   background-color: #D9D9D9;
-    width: 935px;
+    width: 50%;
     height: 95px;
     margin-top: 12px;
    
@@ -99,7 +98,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
- height: 100vh;
+  height: 100vh;
   width: 100%;
 }
 .map-container{
@@ -109,11 +108,13 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
   margin-bottom: 50px;
   width: 100%;
    background-position: top center;
- background-repeat: no-repeat;
- 
- z-index: 0;
- margin-top: 40px;
-margin-bottom: 10px; 
+  background-repeat: no-repeat;
+  z-index: 0;
+  margin-top: 40px;
+  margin-bottom: 10px; 
+  margin-left: auto;
+   margin-right: auto; 
+  
 }
 
 .form-main-container{
@@ -166,3 +167,172 @@ margin-bottom: 10px;
 
 }
 
+/*Extra small device*/
+@media (max-width:575px) {
+  .map-container{
+   background-position:center;
+    margin-left: auto;
+   margin-right: auto; 
+  }
+  .early-access-heading{
+   font-size: 16px;
+   font-weight: 400; 
+  }
+  .signup-para{
+    font-size:16px ;
+    font-weight: 600;
+  }
+  .coming-soon{
+    font-size: 16px;
+    font-weight: 600;
+  }
+}
+
+/*small devices*/
+@media (min-width:576px) and (max-width:767px){
+  .map-container{
+   background-position:center;
+    margin-left: auto;
+   margin-right: auto; 
+  }
+  .early-access-heading{
+   font-size: 18px;
+   font-weight: 500; 
+  }
+  .signup-para{
+    font-size:18px ;
+    font-weight: 700;
+  }
+  .coming-soon{
+    font-size: 18px;
+    font-weight: 700;
+  }
+}
+ /* medium device */
+@media (min-width:768px) and (max-width:991px){
+  .map-container{
+   background-position:center;
+    margin-left: auto;
+   margin-right: auto; 
+  }
+  .early-access-heading{
+   font-size: 24px;
+   font-weight: 500; 
+  }
+  .signup-para{
+    font-size:22px ;
+    font-weight: 700;
+  }
+  .coming-soon{
+    font-size: 24px;
+    font-weight: 700;
+  }
+  .website-mail{
+ 
+  
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 16px;
+         /*  chnages sratsfrom here*/
+  line-height: 24px;
+}
+.text{
+  font-weight: 600;
+  font-size: 13px;
+}
+.language{
+  font-size: 14px;
+ 
+}
+.logo-rti-express{
+  width: 120px;
+  height: 40px;
+}
+
+}
+
+/*large devices (labtops)*/
+
+@media (min-width:992px) and (max-width:1199px){
+.map-container{
+   background-position:top center;
+    margin-left: auto;
+   margin-right: auto; 
+  }
+  .early-access-heading{
+   font-size: 30px;
+   font-weight: 600; 
+  }
+  .signup-para{
+    font-size:28px ;
+    font-weight: 800;
+  }
+  .coming-soon{
+    font-size: 26px;
+    font-weight: 900;
+  }
+  .website-mail{
+  
+  
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 20px;
+         /*  chnages sratsfrom here*/
+  line-height: 24px;
+}
+.text{
+  font-weight: 600;
+  font-size: 18px;
+}
+.language{
+  font-size: 16px;
+ 
+}
+.logo-rti-express{
+  width: 140px;
+  height: 50px;
+}
+
+}
+
+@media (min-width:1200px){
+  .map-container{
+   background-position:top center;
+    margin-left: auto;
+   margin-right: auto; 
+  }
+  .early-access-heading{
+   font-size: 32px;
+   font-weight: 600; 
+  }
+  .signup-para{
+    font-size:27px ;
+    font-weight: 800;
+  }
+  .coming-soon{
+    font-size: 35px;
+    font-weight: 900;
+  }
+  .website-mail{
+  
+  
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 22px;
+        
+  line-height: 24px;
+}
+.text{
+  font-weight: 600;
+  font-size: 18px;
+}
+.language{
+  font-size: 18px;
+ 
+}
+.logo-rti-express{
+  width: 180px;
+  height: 70px;
+}
+
+}
