--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,5 +14,26 @@
 }
 
 #home:hover{
+    
     color: #FF69B4;
+}
+
+@media (min-width:768px)  and (max-width:991px){
+    #home{
+        font-size: 12px;
+        margin-left: auto;
+        margin-right: auto;
+        font-weight: 500;   
+    }
+    
+}
+
+@media (min-width:992px)  and (max-width:1199px){
+    #home{
+        font-size: 15px;
+        margin-left: auto;
+        margin-right: auto;
+        font-weight: 500;   
+    }
+    
 }
