--- a/src/App.css
+++ b/src/App.css
@@ -173,6 +173,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
    background-position:center;
     margin-left: auto;
    margin-right: auto; 
+   margin-top: 10px;
   }
   .early-access-heading{
    font-size: 16px;
@@ -194,6 +195,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
    background-position:center;
     margin-left: auto;
    margin-right: auto; 
+   margin-top: 10px;
   }
   .early-access-heading{
    font-size: 18px;
