--- a/src/App.css
+++ b/src/App.css
@@ -105,13 +105,13 @@
 background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v1752493253/apmap1_lfev8g__1_1752493150-removebg-preview_lhxh1y.png");
   min-height: 100vh;
   background-size: contain;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   width: 100%;
    background-position: top center;
   background-repeat: no-repeat;
   z-index: 0;
   margin-top: 40px;
-  margin-bottom: 10px; 
+  
   margin-left: auto;
    margin-right: auto; 
   
@@ -170,10 +170,10 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
 /*Extra small device*/
 @media (max-width:575px) {
   .map-container{
-   background-position:center;
+   background-position:top center;
     margin-left: auto;
    margin-right: auto; 
-   margin-top: 10px;
+   margin-top: 0px !important;
   }
   .early-access-heading{
    font-size: 16px;
@@ -195,7 +195,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
    background-position:center;
     margin-left: auto;
    margin-right: auto; 
-   margin-top: 10px;
+   margin-top: 0px;
   }
   .early-access-heading{
    font-size: 18px;
