--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
 /*Extra small device*/
 @media (max-width:575px) {
   .map-container{
-   background-position:top center;
+   background-position:center;
     margin-left: auto;
    margin-right: auto; 
    margin-top: 0px !important;
