--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,11 @@
   font-family: "Poppins";
   font-weight: 600;
   font-size: 16px;
-         /*  chnages sratsfrom here*/
   line-height: 24px;
 }
 .icon-email{
-  width: 20px;
-  height: 15px;
+  width: 30px;
+  height: 25px;
   margin-left: 2px;
 }
 .top-left-side-text-container{
@@ -59,14 +58,8 @@
   color: #000000;
 }
 
-
- 
 .epaper{
-  
- 
- 
   text-decoration: none;
-
 }
 .symbol{
   margin-right: 10px;
@@ -187,6 +180,12 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
     font-size: 16px;
     font-weight: 600;
   }
+  .top-container{
+    display: none;
+  }
+  .logo-container{
+    display: none;
+  }
 }
 
 /*small devices*/
@@ -208,6 +207,12 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
   .coming-soon{
     font-size: 18px;
     font-weight: 700;
+  }
+  .top-container{
+    display: none;
+  }
+  .logo-container{
+    display: none;
   }
 }
  /* medium device */
@@ -235,7 +240,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
   font-family: "Poppins";
   font-weight: 600;
   font-size: 16px;
-         /*  chnages sratsfrom here*/
+        
   line-height: 24px;
 }
 .text{
@@ -279,7 +284,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
   font-family: "Poppins";
   font-weight: 600;
   font-size: 20px;
-         /*  chnages sratsfrom here*/
+       
   line-height: 24px;
 }
 .text{
@@ -304,15 +309,15 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
    margin-right: auto; 
   }
   .early-access-heading{
-   font-size: 32px;
+   font-size: 25px;
    font-weight: 600; 
   }
   .signup-para{
-    font-size:27px ;
+    font-size:25px ;
     font-weight: 800;
   }
   .coming-soon{
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 900;
   }
   .website-mail{
@@ -326,7 +331,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
 }
 .text{
   font-weight: 600;
-  font-size: 18px;
+  font-size: 15px;
 }
 .language{
   font-size: 18px;
