--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,13 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  overflow-x: hidden;
+  
 
 }
+html,body{
+overflow-x: hidden;
+}
+
 .app-container{
   display: flex;
   flex-direction: column;
@@ -107,7 +111,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
   
   margin-left: auto;
    margin-right: auto; 
-  
+  display: block;
 }
 
 .form-main-container{
@@ -166,6 +170,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
    background-position:center;
     margin-left: auto;
    margin-right: auto; 
+  
    
   }
   .early-access-heading{
