--- a/src/App.css
+++ b/src/App.css
@@ -169,7 +169,8 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
   .map-container{
    background-position:center;
     margin-left: auto;
-   margin-right: auto; 
+   margin-right: auto;
+   margin-top: 0px; 
   
    
   }
