--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -2,12 +2,15 @@
     width: 100%;
     min-height: 70vh;
     padding: 15px;
+    display: flex;
+    flex-direction: column;
     
 
 }
 .slider-container{
-    width: 50%;
+    width: 80%;
     margin: 15px;
+    align-self: center;
     
     
 }
