--- a/src/components/NewsDetails/index.css
+++ b/src/components/NewsDetails/index.css
@@ -1,6 +1,18 @@
 .slide-details-item-container{
     width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
 }
 .news-details-image{
-    width: 100%;
+    width: 75%;
+    height: auto;
+    align-self: center;
+    padding-bottom: 15px;
+}
+.slide-description{
+    font-size: 16px;
+    font-family: "Roboto";
+    margin: 5px 15px 10px 15px;
+    font-weight: 400;
 }
