--- a/src/components/NewsDetails/index.css
+++ b/src/components/NewsDetails/index.css
@@ -2,17 +2,30 @@
     width: 100%;
     padding: 20px;
     display: flex;
+    flex-direction: row;
+   
+}
+.news-fullinfo-container{
+    width: 50%;
+    display: flex;
     flex-direction: column;
+    margin-right: 15px;
+    
 }
 .news-details-image{
-    width: 75%;
+    width: 90%;
     height: auto;
-    align-self: center;
+   max-height: 350px;
     padding-bottom: 15px;
 }
 .slide-description{
-    font-size: 16px;
+    font-size: 15px;
     font-family: "Roboto";
-    margin: 5px 15px 10px 15px;
+    margin: 5px 15px 10px 0px;
     font-weight: 400;
+    padding-right: 15px;
+    
+}
+.news-card-news-details-container{
+width:40%;
 }
