--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -8,13 +8,136 @@
 
 }
 .slider-container{
-    width: 80%;
-    margin: 15px;
-    align-self: center;
-    
+    width: 65%;
     
 }
+
 .slider-image{
-    width: 100%;
-    height:auto;
+    width: 90%;
+    height: auto;
+    max-height: 400px;
+    margin: 0 auto;
+  display: block;
+}
+
+.swiper-button-prev {
+  left: 8%;  
+  width: 30px;
+  height: 30px;
+}
+
+.swiper-button-next {
+  right: 8%; 
+  width: 30px;
+  height: 30px;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after{
+  font-size: 30px;
+}
+
+.slider-top-rti-join-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* margin: 20px; */
+}
+.rti-join-and-news-letter-container{
+   display: flex;
+  flex-direction: column;
+  
+}
+.rti-join-container{
+  background-color: #1877F2B2;
+  width: 400px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 5px;
+}
+.join-heading{
+  color:#FFFFFF;
+  font-weight: 800;
+  font-size: 24px;
+  
+  font-family: "Manrope";
+  padding: 10px;
+}
+.reporter-button{
+  background-color: #007BFF;
+  width: 80%;
+  
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #FFFFFF;
+  font-weight: 800;
+  font-family: "Inter";
+}
+.news-letter-container{
+  background-color: #D5DCFF;
+  width: 400px;
+  height: 200px;
+  margin-top: 10px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+.daily-news-letter-heading{
+  color: #000000;
+  font-family: "Manrope";
+  font-size: 24px;
+  font-weight: 800;
+
+}
+.news-para{
+  color: #000000;
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+
+}
+.news-letter-mail-container{
+  background-color: #007BFF;
+  border-radius: 5px;
+  padding: 10px;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-family: "Inter";
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.spot-light-home-container{
+    width: 65%;
+    margin-left: 40px;
+    margin-top: 20px;
+}
+.home-spot-light-adds-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
+.home-popular-news-container{
+  width: 65%;
+  margin-left: 40px;
+    margin-top: 20px;
+}
+.home-popular-recent-posts-conatiner{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.taja-updates-heading{
+  margin-left: 70px;
 }
