header-items-social-icons-rearranged

--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,7 @@ background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v175249
 .social-media-icon{
   color: black;
   margin-left: 5px;
+  margin-right: 5px;
 }
 .feedback{
   margin-right: 5px;
