--- a/src/App.css
+++ b/src/App.css
@@ -96,21 +96,21 @@ overflow-x: hidden;
   height: 100vh;
   width: 100%;
 }
-.map-container{
-background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v1752493253/apmap1_lfev8g__1_1752493150-removebg-preview_lhxh1y.png");
-  min-height: 100vh;
-  background-size: contain;
-  margin-bottom: 20px;
-  width: 100%;
-   background-position: top center;
-  background-repeat: no-repeat;
-  z-index: 0;
-  margin-top: 20px;
-  
-  margin-left: auto;
-   margin-right: auto; 
-  display: block;
-}
+/* .map-container{ */
+/* background-image: url("https://res.cloudinary.com/dqdx0yz2t/image/upload/v1752493253/apmap1_lfev8g__1_1752493150-removebg-preview_lhxh1y.png"); */
+  /* min-height: 100vh; */
+  /* back///ground-size: contain; */
+  /* margin-bottom: 20px; */
+  /* width: 100%; */
+   /* background-pos/ition: top center; */
+  /* background-repeat: no-repeat; */
+  /* z-index: 0; */
+  /* margin-top: 20px; */
+
+  /* margin-left: auto; */
+   /* margin-right: auto;  */
+  /* display: block; */
+/* }  */
 
 .form-main-container{
   
