--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,21 @@ overflow-x: hidden;
 .feedback{
   margin-right: 5px;
 }
-
+.facebook{
+  color:	#1877F2;
+}
+.insta{
+  color: 	#E4405F;
+}
+.youtube{
+  color: #FF0000;
+}
+.linkedin{
+  color: #0A66C2;
+}
+.twitter{
+  color: #1DA1F2;
+}
 /*Extra small device*/
 @media (max-width:575px) {
   .map-container{
