--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -144,3 +144,83 @@
 .taja-updates-heading{
   margin-left: 70px;
 }
+
+
+@media (max-width:575px){
+  .taja-updates-heading{
+    margin-left: 5px;
+  }
+  .taja-varathalu{
+    font-size: 22px;
+  }
+  .swiper-pagination{
+    display: none;
+  }
+  .rti-join-and-news-letter-container{
+    display: none;
+  }
+  .slider-container{
+    width: 100%;
+    text-align: center;
+  }
+  .slider-image{
+    width: 100%;
+    max-height: 200px;
+    margin: 0 auto;
+ }
+ .swiper-button-next::after,
+.swiper-button-prev::after{
+  font-size: 20px;
+}
+.swiper-button-next{
+  right: 5%;
+}
+.swiper-button-prev{
+  left: 5%;
+}
+.home-spot-light-adds-container{
+  display: flex;
+  flex-direction: column;
+}
+.spot-light-home-container{
+  width: 100%;
+  margin-top: 10px;
+  margin-left: 5px;
+}
+.home-popular-recent-posts-conatiner{
+  display: flex;
+  flex-direction: column;
+}
+.home-popular-news-container{
+  width: 100%;
+  margin-left: 5px;
+}
+}
+
+@media (min-width:576px) and (max-width:767px){
+  .swiper-pagination{
+    display: none;
+  }
+  .rti-join-and-news-letter-container{
+    display: none;
+  }
+  .slider-container{
+    width: 100%;
+    text-align: center;
+  }
+  .slider-image{
+    width: 89%;
+    max-height: 250px;
+    margin: 0 auto;
+ }
+ .swiper-button-next::after,
+.swiper-button-prev::after{
+  font-size: 25px;
+}
+.swiper-button-next{
+  right: 5%;
+}
+.swiper-button-prev{
+  left: 5%;
+}
+}
