--- a/src/components/PopularNews/index.css
+++ b/src/components/PopularNews/index.css
@@ -40,10 +40,13 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        width: 100%;
     }
     .popular-news-item-card{
-        width: 45%;
+        width: 46%;
         padding: 10px;
+         flex: 0 1 calc(50% - 10px);
+           box-sizing: border-box;
     }
     .popular-news-image{
         width: 100px;
@@ -60,7 +63,7 @@
         height: 100px;
     }
     .popular-news-item-card{
-        width: 47%;
+        width: 45%;
         padding: 10px;
     }
     
