--- a/src/components/AddsBanner/index.css
+++ b/src/components/AddsBanner/index.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 55px;
+    width: 100%;
 }
 
 @media (max-width:375px){
@@ -33,4 +34,21 @@
         width: 250px;
         height: 150px;
     }
+}
+
+@media (min-width:576px) and (max-width:767px){
+    .adds-banner-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 5px;
+    width: 100%;
+  }
+
+  .add-banner-img {
+    width: 45%;
+  }
 }
