--- a/src/components/TodaysSpotLight/index.css
+++ b/src/components/TodaysSpotLight/index.css
@@ -1,24 +1,24 @@
 .todays-spot-light-unordered-container{
     list-style-type: none;
     padding-left: 0px;
-    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    width: 100%;
 }
 .spot-light-image{
     width: 150px;
     height: 150px;
 }
 .spot-light-list-item-container{
-    width: 47%;
+  width: 45%;
     display: flex;
     flex-direction: row;
     align-items: center;
-  margin: 5px;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-   padding: 15px;
-   border-radius: 5px; 
+    margin: 5px;
+    box-shadow: 0px 4px 8px 0px #00000033;
+    padding: 15px;
+    border-radius: 5px; 
 }
 .spot-light-text{
     color: #1E90FF;
@@ -26,6 +26,7 @@
     margin-left: 8px;
     font-weight: 600;
     font-family: "Inter";
+   
 }
 .spot-light-link {
   display: flex;        
@@ -34,6 +35,7 @@
   text-decoration: none;
   color: inherit;
 }
+  
 
 @media (max-width:575px){
   .todays-spot-light-unordered-container{
